--- a/build.xml
+++ b/build.xml
@@ -108,16 +108,13 @@
 
 	<target name="copy-src">
 		<!-- Copy sources -->
-		<copy todir="${mcpsrc.dir}/minecraft/denoflionsx/PluginsforForestry">
-			<fileset dir="${src.dir}/denoflionsx/PluginsforForestry"/>
+		<copy todir="${mcpsrc.dir}/minecraft">
+			<fileset dir="${src.dir}"/>
 			<filterset>
 				<filter token="VERSION" value="${project.version.full}" />
 				<filter token="BUILD_NUMBER" value="${build.number}" />
 			</filterset>
 		</copy>
-                <copy todir="${mcpsrc.dir}/minecraft/forestry}">
-                    <fileset dir="${src.dir}/forestry"/>
-                </copy>
 
                 <unzip dest="${mcpsrc.dir}/minecraft" src="${lib.dir}/denLib-Src.zip"/>
                 <copy todir="${forgelib.dir}">
@@ -174,6 +171,7 @@
 		<!-- Reset src dir to post-forge-install state -->
 		<delete dir="${mcpsrc.dir}/minecraft/denoflionsx"/>
                 <delete dir="${mcpsrc.dir}/minecraft/forestry"/>
+                <delete dir="${mcpsrc.dir}/minecraft/powercrystals"/>
 
 	</target>
 
