--- a/build.xml
+++ b/build.xml
@@ -60,7 +60,7 @@
 
     <!-- Set build number from environment -->
     <target name="version-provided" if="env.BUILD_NUMBER">
-        <property name="build.number" value="${env.BUILD_NUMBER}"/>
+        <buildnumber/>
         <echo message="Setting build number to ${build.number}"/>
     </target>
 	
