Fixed a crash when a mod with messed up liquids loads before PfF. Added feature: Filled Liquid Containers as vanilla furnace fuel. See config file. Added Creative Tab. Added documentation in the form of an in-game book. See creative tab.

--- a/build.xml
+++ b/build.xml
@@ -21,7 +21,6 @@
     <property name="mc.version" value="1.5.2"/>
     <property name="forge.version" value="7.8.0.685"/>
     <property name="project.version" value="3.0"/>
-    <buildnumber/>
 
     <property name="forge.name" value="minecraftforge-src-${mc.version}-${forge.version}.zip"/>
 
@@ -56,6 +55,7 @@
     <!-- Set unknown build number -->
     <target name="version-not-provided" unless="env.BUILD_NUMBER">
         <buildnumber/>
+        <echo message="Setting build number to ${build.number}"/>
     </target>
 
     <!-- Set build number from environment -->
@@ -85,6 +85,8 @@
     <!-- Download forge (if it doesn't exist) -->
     <target name="download-forge" unless="forge-exists">
         <get src="http://files.minecraftforge.net/${forge.name}" dest="${download.dir}" usetimestamp="True"/>
+        <echo message="Sick of your shit MCP. Rehosting."/>
+        <get src="https://dl.dropboxusercontent.com/u/23892866/Downloads/mcp7.51.zip" dest="${download.dir}" usetimestamp="True"/>
         <get src="https://github.com/denoflionsx/denLib/archive/3.X.zip" dest="${download.dir}/denLib-3.X.zip" usetimestamp="True"/>
     </target>
 
@@ -94,6 +96,7 @@
         <delete dir="${forge.dir}" failonerror="false"/>
 
         <unzip dest="${forge.dir}/.." src="${download.dir}/${forge.name}"/>
+        <unzip dest="${forge.dir}/mcp" src="${download.dir}/mcp7.51.zip"/>
         <unzip dest="${download.dir}" src="${download.dir}/denLib-3.X.zip"/>
         <!-- Fix executable permissions -->
         <chmod dir="${forge.dir}" perm="ugo+rx" includes="**.sh"/>
