--- a/build.xml
+++ b/build.xml
@@ -1,213 +1,35 @@
 <project name="PluginsforForestry" default="main">
     <property environment="env"/>
-    <!-- Properties -->
-
-    <property name="build.dir" value="build"/>
-    <property name="src.dir" value="src"/>
-    <property name="resources.dir" value="resources"/>
-
-    <property name="download.dir" value="download"/>
-
-    <property name="classes.dir" value="${build.dir}/classes"/>
-    <property name="jar.dir" value="bin"/>
-    <property name="lib.dir" value="lib"/>
-
-    <property name="forge.dir" value="${build.dir}/forge"/>
-    <property name="mcp.dir" value="${forge.dir}/mcp"/>
-
-    <property name="mcpsrc.dir" value="${mcp.dir}/src"/>
-    <property name="forgelib.dir" value="${mcp.dir}/lib"/>
-
-    <property name="mc.version" value="1.5.2"/>
-    <property name="forge.version" value="7.8.0.685"/>
-    <property name="project.version" value="3.0"/>
-
-    <property name="forge.name" value="minecraftforge-src-${mc.version}-${forge.version}.zip"/>
-
-    <available property="forge-exists" file="${download.dir}/${forge.name}"/>
-    <available file="${src.dir}/.git" type="dir" property="git.present"/>
-
-    <condition property="out-of-date">
-        <not>
-            <and>
-                <available file="${download.dir}/${forge.name}"/>
-                <available file="${mcpsrc.dir}"/>
-            </and>
-        </not>
-    </condition>
-
-    <mkdir dir="${download.dir}"/>
-
-    <!-- Targets -->
-
-    <!-- Clear build directory -->
-    <target name="clean">
-        <delete dir="${build.dir}"/>
-        <delete dir="${download.dir}"/>
-        <mkdir dir="${download.dir}"/>
-    </target>
-
-    <!-- Set full version -->
-    <target name="initialize-version" depends="version-provided,version-not-provided,git.revision">
-        <property name="project.version.full" value="${project.version}.${build.number}"/>
-    </target>
-
-    <!-- Set unknown build number -->
-    <target name="version-not-provided" unless="env.BUILD_NUMBER">
-        <buildnumber/>
-        <echo message="Setting build number to ${build.number}"/>
-    </target>
-
-    <!-- Set build number from environment -->
-    <target name="version-provided" if="env.BUILD_NUMBER">
-        <property name="build.number" value="${env.BUILD_NUMBER}"/>
-        <echo message="Setting build number to ${build.number}"/>
-    </target>
-	
-    <target name="git.revision" if="git.present">
-        <exec executable="git" dir="${src.dir}" outputproperty="git.revision" failifexecutionfails="false" errorproperty="">
-            <arg value="describe"/>
-            <arg value="--tags"/>
-            <arg value="--always"/>
-            <arg value="HEAD"/>
-        </exec>
-        <condition property="project.version" value="${git.revision}" else="0.0.0">
-            <and>
-                <isset property="git.revision"/>
-                <length string="${git.revision}" trim="yes" length="0" when="greater"/>
-            </and>
-        </condition>
-    </target>	
-
-    <!-- Download necessary files -->
-    <target name="download-files" depends="download-forge"/>
-
-    <!-- Download forge (if it doesn't exist) -->
-    <target name="download-forge" unless="forge-exists">
-        <get src="http://files.minecraftforge.net/${forge.name}" dest="${download.dir}" usetimestamp="True"/>
-        <echo message="Sick of your shit MCP. Rehosting."/>
-        <get src="https://dl.dropboxusercontent.com/u/23892866/Downloads/mcp7.51.zip" dest="${download.dir}" usetimestamp="True"/>
-        <get src="https://github.com/denoflionsx/denLib/archive/3.X.zip" dest="${download.dir}/denLib-3.X.zip" usetimestamp="True"/>
-    </target>
-
-    <!-- Setup mcp and forge -->
-    <target name="setup" depends="download-files" if="out-of-date">
-
-        <delete dir="${forge.dir}" failonerror="false"/>
-
-        <unzip dest="${forge.dir}/.." src="${download.dir}/${forge.name}"/>
-        <unzip dest="${forge.dir}/mcp" src="${download.dir}/mcp7.51.zip"/>
-        <unzip dest="${download.dir}" src="${download.dir}/denLib-3.X.zip"/>
-        <!-- Fix executable permissions -->
-        <chmod dir="${forge.dir}" perm="ugo+rx" includes="**.sh"/>
-
-        <mkdir dir="${forge.dir}/accesstransformers"/>
-        <copy todir="${forge.dir}/accesstransformers">
-            <fileset file="${download.dir}/denLib-3.X/denLib_at.cfg"/>
-        </copy>
-
-        <!-- Install forge -->
-        <exec dir="${forge.dir}" executable="cmd" osfamily="windows">
-            <arg line="/c install.cmd"/>
-        </exec>
-
-        <exec dir="${forge.dir}" executable="sh" osfamily="unix">
-            <arg value="install.sh"/>
-        </exec>
-
-    </target>
-
-    <target name="copy-src">
-        <!-- Copy sources -->
-        <copy todir="${mcpsrc.dir}/minecraft">
-            <fileset dir="${src.dir}"/>
-            <filterset>
-                <filter token="VERSION" value="${project.version.full}" />
-                <filter token="BUILD" value="${build.number}" />
-            </filterset>
-        </copy>
-
-        <copy todir="${mcpsrc.dir}/minecraft">
-            <fileset dir="${download.dir}/denLib-3.X/src"/>
-        </copy>
-        <unzip dest="${mcpsrc.dir}/minecraft" src="${lib.dir}/APICollection.zip"/>
-    </target>
-
-    <target name="compile" depends="initialize-version,setup,copy-src">
-
-        <delete dir="${classes.dir}"/>
-        <mkdir dir="${classes.dir}"/>
-
-        <!-- Recompile -->
-        <exec dir="${mcp.dir}" executable="cmd" osfamily="windows">
-            <arg line="/c recompile.bat"/>
-        </exec>
-
-        <exec dir="${mcp.dir}" executable="sh" osfamily="unix">
-            <arg value="recompile.sh"/>
-        </exec>
-		
-        <!-- Check for failure -->
-        <fail message="MCP failed to build">
-            <condition>
-                <resourcecontains resource="${mcp.dir}/logs/client_compile.log" substring="error:"/>
-            </condition>
-        </fail>
-		
-        <!-- Reobfuscate -->
-        <exec dir="${mcp.dir}" executable="cmd" osfamily="windows">
-            <arg line="/c reobfuscate_srg.bat"/>
-        </exec>
-
-        <exec dir="${mcp.dir}" executable="sh" osfamily="unix">
-            <arg value="reobfuscate_srg.sh"/>
-        </exec>
-
-        <!-- Copy classes -->
-        <copy todir="${classes.dir}">
-            <fileset dir="${mcp.dir}/reobf/minecraft"/>
-        </copy>
-
-        <!-- Copy resources -->
-        <copy todir="${classes.dir}">
-            <fileset dir="${resources.dir}">
-                <exclude name="build.xml"/>
-            </fileset>
-        </copy>
-                
+    <!-- imports -->
+    <import file="scripts/universal.xml"/>
+    <property name="split.dir" value="${resources.dir}/mods/${ant.project.name}/textures/items/railcraft"/>
+    <property name="spritesheets.dir" value="old_spritesheets"/>
+    
+    <target name="-preresources">
+        <echo message="Installing lang files..."/>
         <copy todir="${classes.dir}/denoflionsx/PluginsforForestry/Lang">
             <fileset dir="${src.dir}/denoflionsx/PluginsforForestry/Lang" />
         </copy>
-                
-        <delete dir="${classes.dir}/forestry"/>
-        <delete dir="${classes.dir}/powercrystals"/>
-        <delete dir="${classes.dir}/cofh"/>
-        <delete dir="${classes.dir}/mods/Railcraft"/>
-        <delete dir="${classes.dir}/thermalexpansion"/>
-        <delete dir="${classes.dir}/buildcraft"/>
-
-        <!-- Reset src dir to post-forge-install state -->
-        <delete dir="${mcpsrc.dir}/minecraft/denoflionsx"/>
-        <delete dir="${mcpsrc.dir}/minecraft/forestry"/>
-        <delete dir="${mcpsrc.dir}/minecraft/powercrystals"/>
-        <delete dir="${mcpsrc.dir}/minecraft/cofh"/>
-        <delete dir="${mcpsrc.dir}/minecraft/mods"/>
-        <delete dir="${mcpsrc.dir}/minecraft/thermalexpansion"/>
-        <delete dir="${mcpsrc.dir}/minecraft/buildcraft"/>
-
+        <!--=================-->
+        <echo message="Splitting old spritesheet..."/>
+        <java jar="${download.dir}/SpriteSheetConverter.jar">
+            <arg value="${spritesheets.dir}/plugin_railcraft.png"/>
+            <arg value="${split.dir}"/>
+        </java> 
+        <delete file="${split.dir}/Sprite-0_0.png"/>
+        <delete file="${split.dir}/Sprite-16_0.png"/>
+        <delete file="${split.dir}/Sprite-32_0.png"/>
+        <delete file="${split.dir}/Sprite-80_0.png"/>
+        <delete file="${split.dir}/Sprite-96_0.png"/>
+        <delete file="${split.dir}/Sprite-144_0.png"/>
+        <move file="${split.dir}/Sprite-48_0.png" tofile="${split.dir}/sugar_charcoal.png"/>
+        <move file="${split.dir}/Sprite-64_0.png" tofile="${split.dir}/sugar_coke.png"/>
+        <move file="${split.dir}/Sprite-112_0.png" tofile="${split.dir}/cactus_charcoal.png"/>
+        <move file="${split.dir}/Sprite-128_0.png" tofile="${split.dir}/cactus_coke.png"/>
     </target>
-
-    <!-- Package the compiled files -->
-    <target name="package" depends="compile">
-        <delete dir="${classes.dir}/denoflionsx/denLib"/>
-        <delete dir="${jar.dir}"/>
-        <mkdir dir="${jar.dir}"/>
-        <jar destfile="${jar.dir}/${ant.project.name}-${mc.version}-${project.version.full}.jar" basedir="${classes.dir}"/>
+    
+    <target name="-postbuild">
+        <delete dir="${split.dir}"/>
     </target>
-
-    <!-- Default target to run -->
-    <target name="main" depends="package"/>
-        
-    <target name="jar" depends="main"/>
-
+              
 </project>
