--- a/build.xml
+++ b/build.xml
@@ -12,7 +12,7 @@
         </copy>
         <!--=================-->
         <echo message="Splitting old spritesheet..."/>
-        <java jar="${download.dir}/SpriteSheetConverter.jar">
+        <java jar="${download.dir}/SpriteSheetConverter.jar" fork="true">
             <arg value="${spritesheets.dir}/plugin_railcraft.png"/>
             <arg value="${split.dir}"/>
         </java> 
