Creosote oil for impregnated sticks? Why not.

--- a/mod.properties
+++ b/mod.properties
@@ -1,7 +1,7 @@
 mc.version=1.5.2
-forge.version=7.8.0.685
+forge.version=7.8.0.722
 project.version=3.0
-depends.annotation=required-after:denLib;after:MineFactoryReloaded;after:BuildCraft;after:Forestry
+depends.annotation=required-after:denLib;after:MineFactoryReloaded;after:BuildCraft|Core;after:Forestry
 proxy.path=denoflionsx.PluginsforForestry.Proxy
 proxy.common=${proxy.path}.PfFProxyCommon
 proxy.client=${proxy.path}.PfFProxyClient
