--- a/build.xml
+++ b/build.xml
@@ -33,7 +33,7 @@
         <java jar="${download.dir}/SpriteSheetConverter.jar" fork="true">
             <arg value="${spritesheets.dir}/plugin_railcraft.png"/>
             <arg value="${split.dir}"/>
-        </java> 
+        </java>
         <delete file="${split.dir}/Sprite-0_0.png"/>
         <delete file="${split.dir}/Sprite-16_0.png"/>
         <delete file="${split.dir}/Sprite-32_0.png"/>
@@ -44,6 +44,22 @@
         <move file="${split.dir}/Sprite-64_0.png" tofile="${split.dir}/sugar_coke.png"/>
         <move file="${split.dir}/Sprite-112_0.png" tofile="${split.dir}/cactus_charcoal.png"/>
         <move file="${split.dir}/Sprite-128_0.png" tofile="${split.dir}/cactus_coke.png"/>
+    </target>
+    
+    <target name="-prepackage">
+        <echo message="Converting old animations..."/>
+        <java jar="${download.dir}/AnimationConverter.jar" fork="true" output="${classes.dir}/assets/pluginsforforestry/textures/blocks/fluid/peat.flowing.png.mcmeta">
+            <arg value="${resources.dir}/assets/pluginsforforestry/textures/blocks/fluid/peat.flowing.txt"/>
+        </java> 
+        <java jar="${download.dir}/AnimationConverter.jar" fork="true" output="${classes.dir}/assets/pluginsforforestry/textures/blocks/fluid/peat.still.png.mcmeta">
+            <arg value="${resources.dir}/assets/pluginsforforestry/textures/blocks/fluid/peat.still.txt"/>
+        </java>
+        <java jar="${download.dir}/AnimationConverter.jar" fork="true" output="${classes.dir}/assets/pluginsforforestry/textures/blocks/fluid/vegetable.flowing.png.mcmeta">
+            <arg value="${resources.dir}/assets/pluginsforforestry/textures/blocks/fluid/vegetable.flowing.txt"/>
+        </java> 
+        <java jar="${download.dir}/AnimationConverter.jar" fork="true" output="${classes.dir}/assets/pluginsforforestry/textures/blocks/fluid/vegetable.still.png.mcmeta">
+            <arg value="${resources.dir}/assets/pluginsforforestry/textures/blocks/fluid/vegetable.still.txt"/>
+        </java> 
     </target>
     
     <target name="-postbuild">
