--- a/mod.properties
+++ b/mod.properties
@@ -5,3 +5,5 @@ depends.annotation=required-after:denLib;after:MineFactoryReloaded;after:BuildCr
 proxy.path=denoflionsx.PluginsforForestry.Proxy
 proxy.common=${proxy.path}.PfFProxyCommon
 proxy.client=${proxy.path}.PfFProxyClient
+coremod.isCoreMod=true
+coremod.plugin=denoflionsx.PluginsforForestry.Core.CoreMod.PfFCoreMod
