fixing more shit for gradle.

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,30 @@ build/
 bin/
 *.class
 /forge/fml/eclipse/.metadata/
-download/
+downloads/
 *.number
 build.zip
 download.zip
 originals.zip
-manifest.mf
+*.txt
+*.bat
+eclipse/
+gradle/
+.idea/
+.gradle/
+stats/
+saves/
+resourcepacks/
+out/
+*.env
+*.iml
+*.log
+*.ipr
+*.iws
+config/*
+mods/
+*.gradle
+*.lck
+src/api
+screenshots/*
+gradlew
